--- a/home.html
+++ b/home.html
@@ -73,14 +73,14 @@
     <center>
     <div class="container"></div>
     <div class="row align-items-center"></div>
-    <img class="img-fluid mb-3 mb-md-0" src="/home/aldi/Documents/aldi bos/Fairy_tail_natsu_dragneel_chibi_01_by_zalxero-d56otkd.png"
-     alt width"1024" height"806">
-     <h1 style="color:white;">ayo join ke meikarta</h1>
-     <p class="lead">bersih?? oh pasti</p>
-     <p class="lead">modern juga</p>
-     <p class="lead">harga?? gak mahal kok</p>
-     <button type="button" class="btn btn-lg btn-primary" disabled>daftar sekarang</button>
-     <button type="button" class="btn btn-lg btn-secondary" disabled>daftar nanti</button>
+   <center> <img class="img-fluid mb-3 mb-md-0" src="/home/aldi/Documents/aldi bos/Fairy_tail_natsu_dragneel_chibi_01_by_zalxero-d56otkd.png"
+     alt width"1024" height"806"> </center>
+    <center> <h1 style="color:white;">ayo join ke meikarta</h1> </center>
+     <center><p class="lead">bersih?? oh pasti</p>  </center>
+    <center> <p class="lead">modern juga</p> </center>
+     <center><p class="lead">harga?? gak mahal kok</p> </center>
+     <center><button type="button" class="btn btn-lg btn-primary" disabled>daftar sekarang</button> </center>
+     <center><button type="button" class="btn btn-lg btn-secondary" disabled>daftar nanti</button> </center>
      </center>
      
      
